--- a/dashboards/production_consumption.html
+++ b/dashboards/production_consumption.html
@@ -1,125 +1,193 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        <title>Dashboard - Production Consumption</title>
-        <link rel="icon" type="image/x-icon" href="../assets/favicon.ico" />
-        <!-- Font Awesome icons (free version)-->
-        <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
-        <!-- Google fonts-->
-        <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
-        <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="../css/styles.css" rel="stylesheet" />
-        <link href="../css/global.css" rel="stylesheet" />
-    </head>
-    <body id="page-top" class="body-padding">
-        <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
-          <div class="container px-4 px-lg-5">
-              <a class="navbar-brand" href="#page-top">CO2 Emissions Visualization</a>
-              <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                  Menu
-                  <i class="fas fa-bars"></i>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarResponsive">
-                  <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
-                      <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
-                          <ul class="navbar-nav">
-                            <li class="nav-item dropdown">
-                              <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Dashboards
-                              </a>
-                              <ul class="dropdown-menu dropdown-menu-light" aria-labelledby="navbarDarkDropdownMenuLink">
-                                <li><a class="dropdown-item" href="./statistics.html">Statistical analysis</a></li>
-                                <li><a class="dropdown-item" href="./co2emissions.html">CO2 Emissions</a></li>
-                                <li><a class="dropdown-item" href="./co2percapita.html">CO2 Emissions per capita</a></li>
-                                <li><a class="dropdown-item" href="./production_consumption.html">Production consumption</a></li>
-                                <li><a class="dropdown-item" href="./vietnamdetails.html">Viet Nam details</a></li>
-                              </ul>
-                            </li>
-                          </ul>
-                      </div>
-                      <li class="nav-item"><a class="nav-link" href="../index.html#dataset">Dataset</a></li>
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <title>Dashboard - Production Consumption</title>
+    <link rel="icon" type="image/x-icon" href="../assets/favicon.ico" />
+    <!-- Font Awesome icons (free version)-->
+    <script
+      src="https://use.fontawesome.com/releases/v6.3.0/js/all.js"
+      crossorigin="anonymous"
+    ></script>
+    <!-- Google fonts-->
+    <link
+      href="https://fonts.googleapis.com/css?family=Varela+Round"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+      rel="stylesheet"
+    />
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="../css/styles.css" rel="stylesheet" />
+    <link href="../css/global.css" rel="stylesheet" />
+  </head>
+  <body id="page-top" class="body-padding">
+    <!-- Navigation-->
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+      <div class="container px-4 px-lg-5">
+        <a class="nav-link px-4" href="../index.html">
+          <img
+            src="../assets/img/favicon.ico"
+            alt="logo"
+            width="35px"
+            height="35px"
+          />
+        </a>
+        <a class="navbar-brand" href="#page-top">CO2 Emissions Visualization</a>
+        <button
+          class="navbar-toggler navbar-toggler-right"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarResponsive"
+          aria-controls="navbarResponsive"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          Menu
+          <i class="fas fa-bars"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="../index.html">Home</a>
+            </li>
+            <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
+              <ul class="navbar-nav">
+                <li class="nav-item dropdown">
+                  <a
+                    class="nav-link dropdown-toggle"
+                    href="#"
+                    id="navbarDarkDropdownMenuLink"
+                    role="button"
+                    data-bs-toggle="dropdown"
+                    aria-expanded="false"
+                  >
+                    Dashboards
+                  </a>
+                  <ul
+                    class="dropdown-menu dropdown-menu-light"
+                    aria-labelledby="navbarDarkDropdownMenuLink"
+                  >
+                    <li>
+                      <a class="dropdown-item" href="./statistics.html"
+                        >Statistical analysis</a
+                      >
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="./co2emissions.html"
+                        >CO2 Emissions</a
+                      >
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="./co2percapita.html"
+                        >CO2 Emissions per capita</a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        class="dropdown-item"
+                        href="./production_consumption.html"
+                        >Production consumption</a
+                      >
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="./vietnamdetails.html"
+                        >Viet Nam details</a
+                      >
+                    </li>
                   </ul>
-              </div>
-          </div>
-      </nav>
-
-        <div class="dashboard-container">
-          <div class="dashboard-viz">
-            <div
-              class="tableauPlaceholder"
-              id="viz1684418769924"
-              style="position: relative"
-            >
-              <noscript
-                ><a href="#"
-                  ><img
-                    alt="Consumption Dashboard "
-                    src="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;CO&#47;CO2_Project_16838983720480&#47;ConsumptionDashboard&#47;1_rss.png"
-                    style="border: none" /></a></noscript
-              ><object class="tableauViz" style="display: none">
-                <param
-                  name="host_url"
-                  value="https%3A%2F%2Fpublic.tableau.com%2F"
-                />
-                <param name="embed_code_version" value="3" />
-                <param name="site_root" value="" />
-                <param
-                  name="name"
-                  value="CO2_Project_16838983720480&#47;ConsumptionDashboard"
-                />
-                <param name="tabs" value="no" />
-                <param name="toolbar" value="yes" />
-                <param
-                  name="static_image"
-                  value="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;CO&#47;CO2_Project_16838983720480&#47;ConsumptionDashboard&#47;1.png"
-                />
-                <param name="animate_transition" value="yes" />
-                <param name="display_static_image" value="yes" />
-                <param name="display_spinner" value="yes" />
-                <param name="display_overlay" value="yes" />
-                <param name="display_count" value="yes" />
-                <param name="language" value="en-US" />
-                <param name="filter" value="publish=yes" />
-              </object>
+                </li>
+              </ul>
             </div>
-            <script type="text/javascript">
-              var divElement = document.getElementById("viz1684418769924");
-              var vizElement = divElement.getElementsByTagName("object")[0];
-              if (divElement.offsetWidth > 800) {
-                vizElement.style.width = "1600px";
-                vizElement.style.height = "1627px";
-              } else if (divElement.offsetWidth > 500) {
-                vizElement.style.width = "1600px";
-                vizElement.style.height = "1627px";
-              } else {
-                vizElement.style.width = "100%";
-                vizElement.style.height = "2377px";
-              }
-              var scriptElement = document.createElement("script");
-              scriptElement.src =
-                "https://public.tableau.com/javascripts/api/viz_v1.js";
-              vizElement.parentNode.insertBefore(scriptElement, vizElement);
-            </script>
-          </div>
+            <li class="nav-item">
+              <a class="nav-link" href="../index.html#dataset">Dataset</a>
+            </li>
+          </ul>
         </div>
-        
-        <!-- Footer-->
-        <footer class="footer bg-black small text-center text-white-50"><div class="container px-4 px-lg-5">Group 1 - Final Project Data Visualization - HCMUS -  CSC10108</div></footer>
-        <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="../js/scripts.js"></script>
-        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-        <!-- * *                               SB Forms JS                               * *-->
-        <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
-        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-        <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
-    </body>
+      </div>
+    </nav>
+
+    <div class="dashboard-container">
+      <div class="dashboard-viz">
+        <div
+          class="tableauPlaceholder"
+          id="viz1684469465932"
+          style="position: relative"
+        >
+          <noscript
+            ><a href="#"
+              ><img
+                alt="Consumption Dashboard "
+                src="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;CO&#47;CO2_Project_16838983720480&#47;ConsumptionDashboard&#47;1_rss.png"
+                style="border: none" /></a></noscript
+          ><object class="tableauViz" style="display: none">
+            <param
+              name="host_url"
+              value="https%3A%2F%2Fpublic.tableau.com%2F"
+            />
+            <param name="embed_code_version" value="3" />
+            <param name="site_root" value="" />
+            <param
+              name="name"
+              value="CO2_Project_16838983720480&#47;ConsumptionDashboard"
+            />
+            <param name="tabs" value="no" />
+            <param name="toolbar" value="yes" />
+            <param
+              name="static_image"
+              value="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;CO&#47;CO2_Project_16838983720480&#47;ConsumptionDashboard&#47;1.png"
+            />
+            <param name="animate_transition" value="yes" />
+            <param name="display_static_image" value="yes" />
+            <param name="display_spinner" value="yes" />
+            <param name="display_overlay" value="yes" />
+            <param name="display_count" value="yes" />
+            <param name="language" value="en-US" />
+            <param name="filter" value="publish=yes" />
+          </object>
+        </div>
+        <script type="text/javascript">
+          var divElement = document.getElementById("viz1684469465932");
+          var vizElement = divElement.getElementsByTagName("object")[0];
+          if (divElement.offsetWidth > 800) {
+            vizElement.style.width = "1600px";
+            vizElement.style.height = "1627px";
+          } else if (divElement.offsetWidth > 500) {
+            vizElement.style.width = "1600px";
+            vizElement.style.height = "1627px";
+          } else {
+            vizElement.style.width = "100%";
+            vizElement.style.height = "2377px";
+          }
+          var scriptElement = document.createElement("script");
+          scriptElement.src =
+            "https://public.tableau.com/javascripts/api/viz_v1.js";
+          vizElement.parentNode.insertBefore(scriptElement, vizElement);
+        </script>
+      </div>
+    </div>
+
+    <!-- Footer-->
+    <footer class="footer bg-black small text-center text-white-50">
+      <div class="container px-4 px-lg-5">
+        Group 1 - Final Project Data Visualization - HCMUS - CSC10108
+      </div>
+    </footer>
+    <!-- Bootstrap core JS-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Core theme JS-->
+    <script src="../js/scripts.js"></script>
+    <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
+    <!-- * *                               SB Forms JS                               * *-->
+    <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
+    <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
+    <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
+  </body>
 </html>
