--- a/dashboards/solution.html
+++ b/dashboards/solution.html
@@ -8,7 +8,7 @@
     />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Dashboard - CO2 Emissions</title>
+    <title>Dashboard - Solution</title>
     <link rel="icon" type="image/x-icon" href="../assets/favicon.ico" />
     <!-- Font Awesome icons (free version)-->
     <script
@@ -123,18 +123,19 @@
       </div>
     </nav>
 
+    <!-- Dashboard -->
     <div class="dashboard-container">
       <div class="dashboard-viz">
         <div
           class="tableauPlaceholder"
-          id="viz1684419722717"
+          id="viz1684504527514"
           style="position: relative"
         >
           <noscript
             ><a href="#"
               ><img
-                alt="Dashboard 1 "
-                src="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Co&#47;Co2_project_16837883157330&#47;Dashboard1&#47;1_rss.png"
+                alt="GIAI PHAP "
+                src="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;gi&#47;giaiphap&#47;GIAIPHAP&#47;1_rss.png"
                 style="border: none" /></a></noscript
           ><object class="tableauViz" style="display: none">
             <param
@@ -143,15 +144,12 @@
             />
             <param name="embed_code_version" value="3" />
             <param name="site_root" value="" />
-            <param
-              name="name"
-              value="Co2_project_16837883157330&#47;Dashboard1"
-            />
+            <param name="name" value="giaiphap&#47;GIAIPHAP" />
             <param name="tabs" value="no" />
             <param name="toolbar" value="yes" />
             <param
               name="static_image"
-              value="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Co&#47;Co2_project_16837883157330&#47;Dashboard1&#47;1.png"
+              value="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;gi&#47;giaiphap&#47;GIAIPHAP&#47;1.png"
             />
             <param name="animate_transition" value="yes" />
             <param name="display_static_image" value="yes" />
@@ -163,7 +161,7 @@
           </object>
         </div>
         <script type="text/javascript">
-          var divElement = document.getElementById("viz1684419722717");
+          var divElement = document.getElementById("viz1684504527514");
           var vizElement = divElement.getElementsByTagName("object")[0];
           if (divElement.offsetWidth > 800) {
             vizElement.style.width = "1600px";
@@ -173,7 +171,7 @@
             vizElement.style.height = "1627px";
           } else {
             vizElement.style.width = "100%";
-            vizElement.style.height = "3027px";
+            vizElement.style.height = "3227px";
           }
           var scriptElement = document.createElement("script");
           scriptElement.src =
