--- a/dashboards/statistics.html
+++ b/dashboards/statistics.html
@@ -29,92 +29,107 @@
     <link href="../css/global.css" rel="stylesheet" />
   </head>
   <body id="page-top">
-    <!-- Navigation-->
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
-      <div class="container px-4 px-lg-5">
-        <a class="nav-link px-4" href="../index.html">
-          <img
-            src="../assets/img/favicon.ico"
-            alt="logo"
-            width="35px"
-            height="35px"
-          />
-        </a>
-        <a class="navbar-brand" href="#page-top">
-          CO2 Emissions Visualization</a
+        <!-- Navigation -->
+        <nav
+          class="navbar navbar-expand-lg navbar-light fixed-top"
+          id="mainNav"
         >
-        <button
-          class="navbar-toggler navbar-toggler-right"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarResponsive"
-          aria-controls="navbarResponsive"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          Menu
-          <i class="fas fa-bars"></i>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="../index.html">Home</a>
-            </li>
-            <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
-              <ul class="navbar-nav">
-                <li class="nav-item dropdown">
-                  <a
-                    class="nav-link dropdown-toggle"
-                    href="#"
-                    id="navbarDarkDropdownMenuLink"
-                    role="button"
-                    data-bs-toggle="dropdown"
-                    aria-expanded="false"
-                  >
-                    Dashboards
-                  </a>
-                  <ul
-                    class="dropdown-menu dropdown-menu-light"
-                    aria-labelledby="navbarDarkDropdownMenuLink"
-                  >
-                    <li>
-                      <a class="dropdown-item" href="./statistics.html"
-                        >Statistical analysis</a
-                      >
-                    </li>
-                    <li>
-                      <a class="dropdown-item" href="./co2emissions.html"
-                        >CO2 Emissions</a
-                      >
-                    </li>
-                    <li>
-                      <a class="dropdown-item" href="./co2percapita.html"
-                        >CO2 Emissions per capita</a
-                      >
-                    </li>
-                    <li>
+          <div class="container px-4 px-lg-5">
+            <a class="nav-link px-4" href="../index.html">
+              <img
+                src="../assets/img/favicon.ico"
+                alt="logo"
+                width="35px"
+                height="35px"
+              />
+            </a>
+
+            <a class="navbar-brand" href="#page-top"
+              >CO2 Emissions Visualization</a
+            >
+            <button
+              class="navbar-toggler navbar-toggler-right"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarResponsive"
+              aria-controls="navbarResponsive"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              Menu
+              <i class="fas fa-bars"></i>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+              <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                  <a class="nav-link" href="../index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../index.html#dataset">Dataset</a>
+                </li>
+                <div
+                  class="collapse navbar-collapse"
+                  id="navbarNavDarkDropdown"
+                >
+                  <ul class="navbar-nav">
+                    <li class="nav-item dropdown">
                       <a
-                        class="dropdown-item"
-                        href="./production_consumption.html"
-                        >Production consumption</a
+                        class="nav-link dropdown-toggle"
+                        href="#"
+                        id="navbarDarkDropdownMenuLink"
+                        role="button"
+                        data-bs-toggle="dropdown"
+                        aria-expanded="false"
                       >
-                    </li>
-                    <li>
-                      <a class="dropdown-item" href="./vietnamdetails.html"
-                        >Viet Nam details</a
+                        Dashboards
+                      </a>
+                      <ul
+                        class="dropdown-menu dropdown-menu-light"
+                        aria-labelledby="navbarDarkDropdownMenuLink"
                       >
+                        <li>
+                          <a class="dropdown-item" href="./statistics.html"
+                            >Statistical analysis</a
+                          >
+                        </li>
+                        <li>
+                          <a class="dropdown-item" href="./co2emissions.html"
+                            >CO2 Emissions</a
+                          >
+                        </li>
+                        <li>
+                          <a class="dropdown-item" href="./co2percapita.html"
+                            >CO2 Emissions per capita</a
+                          >
+                        </li>
+                        <li>
+                          <a
+                            class="dropdown-item"
+                            href="./production_consumption.html"
+                            >Production consumption</a
+                          >
+                        </li>
+                        <li>
+                          <a class="dropdown-item" href="./vietnamdetails.html"
+                            >Viet Nam details</a
+                          >
+                        </li>
+                        <li>
+                          <a class="dropdown-item" href="./model.html">Model</a>
+                        </li>
+                        <li>
+                          <a class="dropdown-item" href="./solution.html"
+                            >Solution</a
+                          >
+                        </li>
+                      </ul>
                     </li>
                   </ul>
-                </li>
+                </div>
               </ul>
             </div>
-            <li class="nav-item">
-              <a class="nav-link" href="../index.html#dataset">Dataset</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+          </div>
+        </nav>
 
     <div class="dashboard-container">
       <div class="dashboard-viz">
