--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item"><a class="nav-link" href="#about">Why ?</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#dataset">Dataset</a></li>
                         <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
                             <ul class="navbar-nav">
                               <li class="nav-item dropdown">
@@ -40,11 +41,12 @@
                                   <li><a class="dropdown-item" href="./dashboards/co2percapita.html">CO2 Emissions per capita</a></li>
                                   <li><a class="dropdown-item" href="./dashboards/production_consumption.html">Production consumption</a></li>
                                   <li><a class="dropdown-item" href="./dashboards/vietnamdetails.html">Viet Nam details</a></li>
+                                  <li><a class="dropdown-item" href="./dashboards/model.html">Models</a></li>
+                                  <li><a class="dropdown-item" href="./dashboards/solution.html">Solution</a></li>
                                 </ul>
                               </li>
                             </ul>
                         </div>
-                        <li class="nav-item"><a class="nav-link" href="#dataset">Dataset</a></li>
                     </ul>
                 </div>
             </div>
