--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                                   <li><a class="dropdown-item" href="./dashboards/co2percapita.html">CO2 Emissions per capita</a></li>
                                   <li><a class="dropdown-item" href="./dashboards/production_consumption.html">Production consumption</a></li>
                                   <li><a class="dropdown-item" href="./dashboards/vietnamdetails.html">Viet Nam details</a></li>
-                                  <li><a class="dropdown-item" href="./dashboards/model.html">Models</a></li>
+                                  <li><a class="dropdown-item" href="./dashboards/model.html">Regression analysis</a></li>
                                   <li><a class="dropdown-item" href="./dashboards/solution.html">Solution</a></li>
                                 </ul>
                               </li>
