--- a/dashboards/co2emissions.html
+++ b/dashboards/co2emissions.html
@@ -107,7 +107,7 @@
                       >
                     </li>
                     <li>
-                      <a class="dropdown-item" href="./model.html">Model</a>
+                      <a class="dropdown-item" href="./model.html">Regression analysis</a>
                     </li>
                     <li>
                       <a class="dropdown-item" href="./solution.html"
