--- a/dashboards/model.html
+++ b/dashboards/model.html
@@ -8,7 +8,7 @@
     />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Dashboard - Model</title>
+    <title>Dashboard - Regression analysis</title>
     <link rel="icon" type="image/x-icon" href="../assets/favicon.ico" />
     <!-- Font Awesome icons (free version)-->
     <script
@@ -29,112 +29,155 @@
     <link href="../css/global.css" rel="stylesheet" />
   </head>
   <body id="page-top" class="body-padding">
-        <!-- Navigation -->
-        <nav
-          class="navbar navbar-expand-lg navbar-light fixed-top"
-          id="mainNav"
-        >
-          <div class="container px-4 px-lg-5">
-            <a class="nav-link px-4" href="../index.html">
-              <img
-                src="../assets/img/favicon.ico"
-                alt="logo"
-                width="35px"
-                height="35px"
-              />
-            </a>
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+      <div class="container px-4 px-lg-5">
+        <a class="nav-link px-4" href="../index.html">
+          <img
+            src="../assets/img/favicon.ico"
+            alt="logo"
+            width="35px"
+            height="35px"
+          />
+        </a>
 
-            <a class="navbar-brand" href="#page-top"
-              >CO2 Emissions Visualization</a
-            >
-            <button
-              class="navbar-toggler navbar-toggler-right"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#navbarResponsive"
-              aria-controls="navbarResponsive"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
-            >
-              Menu
-              <i class="fas fa-bars"></i>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-              <ul class="navbar-nav ms-auto">
-                <li class="nav-item">
-                  <a class="nav-link" href="../index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="../index.html#dataset">Dataset</a>
-                </li>
-                <div
-                  class="collapse navbar-collapse"
-                  id="navbarNavDarkDropdown"
-                >
-                  <ul class="navbar-nav">
-                    <li class="nav-item dropdown">
+        <a class="navbar-brand" href="#page-top">CO2 Emissions Visualization</a>
+        <button
+          class="navbar-toggler navbar-toggler-right"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarResponsive"
+          aria-controls="navbarResponsive"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          Menu
+          <i class="fas fa-bars"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="../index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../index.html#dataset">Dataset</a>
+            </li>
+            <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
+              <ul class="navbar-nav">
+                <li class="nav-item dropdown">
+                  <a
+                    class="nav-link dropdown-toggle"
+                    href="#"
+                    id="navbarDarkDropdownMenuLink"
+                    role="button"
+                    data-bs-toggle="dropdown"
+                    aria-expanded="false"
+                  >
+                    Dashboards
+                  </a>
+                  <ul
+                    class="dropdown-menu dropdown-menu-light"
+                    aria-labelledby="navbarDarkDropdownMenuLink"
+                  >
+                    <li>
+                      <a class="dropdown-item" href="./statistics.html"
+                        >Statistical analysis</a
+                      >
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="./co2emissions.html"
+                        >CO2 Emissions</a
+                      >
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="./co2percapita.html"
+                        >CO2 Emissions per capita</a
+                      >
+                    </li>
+                    <li>
                       <a
-                        class="nav-link dropdown-toggle"
-                        href="#"
-                        id="navbarDarkDropdownMenuLink"
-                        role="button"
-                        data-bs-toggle="dropdown"
-                        aria-expanded="false"
+                        class="dropdown-item"
+                        href="./production_consumption.html"
+                        >Production consumption</a
                       >
-                        Dashboards
-                      </a>
-                      <ul
-                        class="dropdown-menu dropdown-menu-light"
-                        aria-labelledby="navbarDarkDropdownMenuLink"
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="./vietnamdetails.html"
+                        >Viet Nam details</a
                       >
-                        <li>
-                          <a class="dropdown-item" href="./statistics.html"
-                            >Statistical analysis</a
-                          >
-                        </li>
-                        <li>
-                          <a class="dropdown-item" href="./co2emissions.html"
-                            >CO2 Emissions</a
-                          >
-                        </li>
-                        <li>
-                          <a class="dropdown-item" href="./co2percapita.html"
-                            >CO2 Emissions per capita</a
-                          >
-                        </li>
-                        <li>
-                          <a
-                            class="dropdown-item"
-                            href="./production_consumption.html"
-                            >Production consumption</a
-                          >
-                        </li>
-                        <li>
-                          <a class="dropdown-item" href="./vietnamdetails.html"
-                            >Viet Nam details</a
-                          >
-                        </li>
-                        <li>
-                          <a class="dropdown-item" href="./model.html">Model</a>
-                        </li>
-                        <li>
-                          <a class="dropdown-item" href="./solution.html"
-                            >Solution</a
-                          >
-                        </li>
-                      </ul>
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="./model.html">Regression analysis</a>
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="./solution.html"
+                        >Solution</a
+                      >
                     </li>
                   </ul>
-                </div>
+                </li>
               </ul>
             </div>
-          </div>
-        </nav>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
     <!-- Dashboard -->
     <div class="dashboard-container">
       <div class="dashboard-viz">
-        <div class='tableauPlaceholder' id='viz1684508973716' style='position: relative'><noscript><a href='#'><img alt='Dashboard 1 ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Re&#47;RegressionAnalyze&#47;Dashboard1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='RegressionAnalyze&#47;Dashboard1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Re&#47;RegressionAnalyze&#47;Dashboard1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1684508973716');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1600px';vizElement.style.height='1627px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1600px';vizElement.style.height='1627px';} else { vizElement.style.width='100%';vizElement.style.height='1777px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+        <div
+          class="tableauPlaceholder"
+          id="viz1684508973716"
+          style="position: relative"
+        >
+          <noscript
+            ><a href="#"
+              ><img
+                alt="Dashboard 1 "
+                src="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Re&#47;RegressionAnalyze&#47;Dashboard1&#47;1_rss.png"
+                style="border: none" /></a></noscript
+          ><object class="tableauViz" style="display: none">
+            <param
+              name="host_url"
+              value="https%3A%2F%2Fpublic.tableau.com%2F"
+            />
+            <param name="embed_code_version" value="3" />
+            <param name="site_root" value="" />
+            <param name="name" value="RegressionAnalyze&#47;Dashboard1" />
+            <param name="tabs" value="no" />
+            <param name="toolbar" value="yes" />
+            <param
+              name="static_image"
+              value="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Re&#47;RegressionAnalyze&#47;Dashboard1&#47;1.png"
+            />
+            <param name="animate_transition" value="yes" />
+            <param name="display_static_image" value="yes" />
+            <param name="display_spinner" value="yes" />
+            <param name="display_overlay" value="yes" />
+            <param name="display_count" value="yes" />
+            <param name="language" value="en-US" />
+            <param name="filter" value="publish=yes" />
+          </object>
+        </div>
+        <script type="text/javascript">
+          var divElement = document.getElementById("viz1684508973716");
+          var vizElement = divElement.getElementsByTagName("object")[0];
+          if (divElement.offsetWidth > 800) {
+            vizElement.style.width = "1600px";
+            vizElement.style.height = "1627px";
+          } else if (divElement.offsetWidth > 500) {
+            vizElement.style.width = "1600px";
+            vizElement.style.height = "1627px";
+          } else {
+            vizElement.style.width = "100%";
+            vizElement.style.height = "1777px";
+          }
+          var scriptElement = document.createElement("script");
+          scriptElement.src =
+            "https://public.tableau.com/javascripts/api/viz_v1.js";
+          vizElement.parentNode.insertBefore(scriptElement, vizElement);
+        </script>
       </div>
     </div>
 
