--- a/dashboards/statistics.html
+++ b/dashboards/statistics.html
@@ -115,7 +115,7 @@
                           >
                         </li>
                         <li>
-                          <a class="dropdown-item" href="./model.html">Model</a>
+                          <a class="dropdown-item" href="./model.html">Regression analysis</a>
                         </li>
                         <li>
                           <a class="dropdown-item" href="./solution.html"
