--- a/dashboards/solution.html
+++ b/dashboards/solution.html
@@ -180,7 +180,21 @@
         </script>
       </div>
     </div>
-
+        <!-- Pagination-->
+        <nav aria-label="Page navigation">
+            <ul class="pagination justify-content-center">
+              <li class="page-item">
+                <a class="page-link" href="./model.html">Previous</a>
+              </li>
+              <li class="page-item">
+                <a class="page-link" href="../index.html">Home</a>
+              </li>
+              <li class="page-item disabled">
+                <a class="page-link" href="#">Next</a>
+              </li>
+            </ul>
+          </nav>
+        </br>
     <!-- Footer-->
     <footer class="footer bg-black small text-center text-white-50">
       <div class="container px-4 px-lg-5">
